cabal-version: 2.4
name: zulip-archive
version: 0.1.0.0
license: BSD-3-Clause
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
category: Web

executable zulip-archive
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    extensions:
        OverloadedStrings
        TypeApplications
        ScopedTypeVariables
        LambdaCase
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude)
    build-depends:
        base ^>=4.12.0.0,
        aeson,
        clay -any,
        lucid -any,
        path,
        rib ^>=0.7,
        relude,
        shake -any,
        text,
        req,
        casing,
        shower
