cabal-version: 2.4
name: zulip-archive
version: 0.1.0.0
license: BSD-3-Clause
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
category: Web

executable zulip-archive
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        base,
        aeson,
        async,
        clay -any,
        lucid -any,
        path,
        rib ^>=0.8,
        relude,
        shake -any,
        text,
        req,
        unix,
        casing,
        shower,
        exceptions,
        time,
        directory,
        containers,
        cryptonite,
        dhall,
        tagsoup,
        dependent-sum
