cabal-version: 2.4
name: zulip-archive
version: 0.1.1.0
license: BSD-3-Clause
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
category: Web

executable zulip-archive
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
        Web.Slug
        Web.UniqSlug
        Zulip.Client
        Zulip.Internal
        Config
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        base,
        aeson,
        async,
        clay -any,
        lucid -any,
        rib >= 1.0,
        relude,
        shake -any,
        text,
        req,
        unix,
        casing,
        shower,
        filepath,
        exceptions,
        time,
        directory,
        containers,
        cryptonite,
        dhall,
        tagsoup,
        dependent-sum,
        modern-uri
